Add Sign in to admin_scope

--- a/app/views/admin_scope/shared/_navigation.html.slim
+++ b/app/views/admin_scope/shared/_navigation.html.slim
@@ -3,5 +3,5 @@
   title-bar-title Menu
 
 nav.top-bar#navigation_menu
-  = render "navigation_main"
-  = render "navigation_user"
+  = render 'admin_scope/shared/navigation_main'
+  = render 'admin_scope/shared/navigation_admin'
