--- a/app/views/layouts/admin_scope.html.slim
+++ b/app/views/layouts/admin_scope.html.slim
@@ -18,6 +18,8 @@ html class="no-js" lang="en"
 
   body
     = render 'admin_scope/shared/navigation'
+    = render 'admin_scope/shared/messages'
+
 
     .row
       main.container
