--- a/app/views/application/_navigation_main.html.slim
+++ b/app/views/application/_navigation_main.html.slim
@@ -1,5 +1,9 @@
 .top-bar-left
   ul.menu
     li = link_to "Project X", root_path
+    li = active_link_to "Home", root_path, active: :exclusive, wrap_tag: :li
+    li = active_link_to "About me", about_me_path, active: :exclusive, wrap_tag: :li
+    li = active_link_to "Contact me", contact_path, active: :exclusive, wrap_tag: :li
+    li = active_link_to "Articles", stories_path, active: :exclusive, wrap_tag: :li
     - if user_signed_in?
       = active_link_to "Home", root_path, active: :exclusive, wrap_tag: :li
