Fix Stories Header

--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -1,4 +1,3 @@
-.article-row-section
-  .article-row-section-inner
-    h2.article-row-section-header Stories:
-    = render stories
+.row
+  h2 Stories:
+  = render stories
