--- a/app/views/admin_scope/shared/_navigation_admin.html.slim
+++ b/app/views/admin_scope/shared/_navigation_admin.html.slim
@@ -4,3 +4,4 @@ ul.top-bar-right.menu.dropdown(data-dropdown-menu)
       a = current_admin.first_name + " " + current_admin.last_name
       ul.menu
         li = link_to "Sign out", destroy_admin_session_path
+        li = link_to "Edit profile", edit_admin_registration_path
